Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Age_of_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Enquiry__c</fullName>
    <formula>IF(TEXT( Enquiry_Status__c ) &lt;&gt; &quot;Closed&quot;, TODAY() - Enquiry_Date__c, Closed_Date__c - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of Enquiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>