Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount(not used)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>