Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/BDM_Conformation_Comments__c.field-meta.xml
<CustomField>
    <fullName>BDM_Conformation_Comments__c</fullName>
    <label>BD Confirmation Comments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Contacted over phone &amp; will meet in 2 days</fullName>
            </value>
            <value>
                <fullName>Given dealer details</fullName>
            </value>
            <value>
                <fullName>Given price details</fullName>
            </value>
            <value>
                <fullName>Given price list</fullName>
            </value>
            <value>
                <fullName>Given Quotation</fullName>
            </value>
            <value>
                <fullName>Gone for other brand</fullName>
            </value>
            <value>
                <fullName>Not Approved Brand</fullName>
            </value>
            <value>
                <fullName>Not Reachable</fullName>
            </value>
            <value>
                <fullName>Purchased ashirvad pipes</fullName>
            </value>
            <value>
                <fullName>Referred distributor</fullName>
            </value>
            <value>
                <fullName>Resent SMS</fullName>
            </value>
            <value>
                <fullName>RInging no response</fullName>
            </value>
            <value>
                <fullName>Switched off</fullName>
            </value>
            <value>
                <fullName>Will contact today</fullName>
            </value>
            <value>
                <fullName>Will meet by the end of the day</fullName>
            </value>
            <value>
                <fullName>Will meet by tomorrow</fullName>
            </value>
            <value>
                <fullName>Given technical details</fullName>
            </value>
            <value>
                <fullName>Customer is yet to respond</fullName>
            </value>
            <value>
                <fullName>Product has been replaced</fullName>
            </value>
            <value>
                <fullName>Given Technical Manual</fullName>
            </value>
            <value>
                <fullName>No Vacancy</fullName>
            </value>
            <value>
                <fullName>Contacted over phone &amp; waiting for BOQ</fullName>
            </value>
            <value>
                <fullName>BOQ received , will quote shortly</fullName>
            </value>
            <value>
                <fullName>Disconnected</fullName>
            </value>
            <value>
                <fullName>Whatsapp  reply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>