Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/BDMRemarks__c.field-meta.xml
<CustomField>
    <fullName>BDMRemarks__c</fullName>
    <label>BDM Remarks(not used)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>