Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <description>Business Line for enquiries</description>
    <label>Business Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Column</fullName>
            </value>
            <value>
                <fullName>All Products</fullName>
            </value>
            <value>
                <fullName>Agri Pipes</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>