Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Date__c</fullName>
    <label>Call Date(not used)</label>
    <type>Date</type>
</CustomField>