Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Call_to_Team_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_to_Team_Date__c</fullName>
    <label>Call to Team Date(not used)</label>
    <type>Date</type>
</CustomField>