Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Caller_type__c.field-meta.xml
<CustomField>
    <fullName>Caller_type__c</fullName>
    <label>Caller Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Consultants</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Existing Dealer</fullName>
            </value>
            <value>
                <fullName>Existing DP</fullName>
            </value>
            <value>
                <fullName>Farmer</fullName>
            </value>
            <value>
                <fullName>Interior Designer</fullName>
            </value>
            <value>
                <fullName>Mechanic</fullName>
            </value>
            <value>
                <fullName>Plumber</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Prospective dealer</fullName>
            </value>
            <value>
                <fullName>Purchase Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>