Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category(not used)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DEALERSHIP</fullName>
            </value>
            <value>
                <fullName>DISTRIBUTOSHIP</fullName>
            </value>
            <value>
                <fullName>EXPANSION</fullName>
            </value>
            <value>
                <fullName>LOOP</fullName>
            </value>
            <value>
                <fullName>Need to give training to the plumbers</fullName>
            </value>
            <value>
                <fullName>PRICE</fullName>
            </value>
            <value>
                <fullName>PRICE &amp; DEALERS</fullName>
            </value>
            <value>
                <fullName>PRICE &amp; DISCOUNT</fullName>
            </value>
            <value>
                <fullName>PRICE LIST &amp; TM</fullName>
            </value>
            <value>
                <fullName>PRICELIST &amp; TM</fullName>
            </value>
            <value>
                <fullName>PRICELIST &amp;DEALER</fullName>
            </value>
            <value>
                <fullName>PRICELIST &amp;TM</fullName>
            </value>
            <value>
                <fullName>QUOTATION</fullName>
            </value>
            <value>
                <fullName>TECHNICAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>