Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Conversion__c.field-meta.xml
<CustomField>
    <fullName>Conversion__c</fullName>
    <label>Conversion(not used)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Converted to Ashirwad</fullName>
            </value>
            <value>
                <fullName>Not Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>