Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Converted__c.field-meta.xml
<CustomField>
    <fullName>Converted__c</fullName>
    <label>Converted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>