Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Customer_Care__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care__c</fullName>
    <label>Customer Care Executive(not used)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Madhavi</fullName>
            </value>
            <value>
                <fullName>Bhargavi</fullName>
            </value>
            <value>
                <fullName>Pramila</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>