Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Customer_Response__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response__c</fullName>
    <label>Customer Response</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>