Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Distributor_DealerLinked__c.field-meta.xml
<CustomField>
    <fullName>Distributor_DealerLinked__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor/Dealer Linked(in validation)</label>
    <referenceTo>Distributor_Dealer__c</referenceTo>
    <relationshipLabel>Enquiries</relationshipLabel>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>