Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Enquiry_Address__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Address__c</fullName>
    <label>Enquiry Address</label>
    <type>TextArea</type>
</CustomField>