Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Enquiry_No__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_No__c</fullName>
    <displayFormat>A{000}</displayFormat>
    <label>Enquiry No.(not used)</label>
    <type>AutoNumber</type>
</CustomField>