Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Enquiry_Status__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Status__c</fullName>
    <label>Enquiry Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <color>#F3D904</color>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <color>#990000</color>
                <label>Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>