Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Enquiry_Through__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Through__c</fullName>
    <label>Enquiry Through(not used)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eindia</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Vsnl</fullName>
            </value>
            <value>
                <fullName>Enquiry Mobile</fullName>
            </value>
            <value>
                <fullName>Nandini Mobile</fullName>
            </value>
            <value>
                <fullName>Vani Mobile</fullName>
            </value>
            <value>
                <fullName>Landline</fullName>
            </value>
            <value>
                <fullName>Toll Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>