Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Executive_Name__c.field-meta.xml
<CustomField>
    <fullName>Executive_Name__c</fullName>
    <label>Executive Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executive 1</fullName>
            </value>
            <value>
                <fullName>Executive 2</fullName>
            </value>
            <value>
                <fullName>Executive 3</fullName>
            </value>
            <value>
                <fullName>Executive 4</fullName>
            </value>
            <value>
                <fullName>Executive 5</fullName>
            </value>
            <value>
                <fullName>Executive 6</fullName>
            </value>
            <value>
                <fullName>Executive 7</fullName>
            </value>
            <value>
                <fullName>Executive 8</fullName>
            </value>
            <value>
                <fullName>Executive 9</fullName>
            </value>
            <value>
                <fullName>Executive 10</fullName>
            </value>
            <value>
                <fullName>Executive 11</fullName>
            </value>
            <value>
                <fullName>Executive 12</fullName>
            </value>
            <value>
                <fullName>Executive 13</fullName>
            </value>
            <value>
                <fullName>Executive 14</fullName>
            </value>
            <value>
                <fullName>Executive 15</fullName>
            </value>
            <value>
                <fullName>Executive 16</fullName>
            </value>
            <value>
                <fullName>Executive 17</fullName>
            </value>
            <value>
                <fullName>Executive 18</fullName>
            </value>
            <value>
                <fullName>Executive 19</fullName>
            </value>
            <value>
                <fullName>Executive 20</fullName>
            </value>
            <value>
                <fullName>Executive 21</fullName>
            </value>
            <value>
                <fullName>Executive 22</fullName>
            </value>
            <value>
                <fullName>Executive 23</fullName>
            </value>
            <value>
                <fullName>Executive 24</fullName>
            </value>
            <value>
                <fullName>Executive 25</fullName>
            </value>
            <value>
                <fullName>Executive 26</fullName>
            </value>
            <value>
                <fullName>Executive 27</fullName>
            </value>
            <value>
                <fullName>Executive 28</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>