Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Followup_Remark_Customer__c.field-meta.xml
<CustomField>
    <fullName>Followup_Remark_Customer__c</fullName>
    <label>Followup Remark Customer(not used)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>