Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Further_requirement__c.field-meta.xml
<CustomField>
    <fullName>Further_requirement__c</fullName>
    <label>Further requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>