Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/HO_Remarks__c.field-meta.xml
<CustomField>
    <fullName>HO_Remarks__c</fullName>
    <label>Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>