Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/HQ__c.field-meta.xml
<CustomField>
    <fullName>HQ__c</fullName>
    <label>HQ</label>
    <length>80</length>
    <type>Text</type>
</CustomField>