Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <length>160</length>
    <type>Text</type>
</CustomField>