Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>Mobile</label>
    <length>80</length>
    <type>Text</type>
</CustomField>