Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Mobile_check__c.field-meta.xml
<CustomField>
    <fullName>Mobile_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile check</label>
    <type>Checkbox</type>
</CustomField>