Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <label>Month-Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jan-2019</fullName>
            </value>
            <value>
                <fullName>Feb-2019</fullName>
            </value>
            <value>
                <fullName>March-2019</fullName>
            </value>
            <value>
                <fullName>April-2019</fullName>
            </value>
            <value>
                <fullName>May-2019</fullName>
            </value>
            <value>
                <fullName>June-2019</fullName>
            </value>
            <value>
                <fullName>July-2019</fullName>
            </value>
            <value>
                <fullName>Aug-2019</fullName>
            </value>
            <value>
                <fullName>Sept-2019</fullName>
            </value>
            <value>
                <fullName>Oct-2019</fullName>
            </value>
            <value>
                <fullName>Nov-2019</fullName>
            </value>
            <value>
                <fullName>Dec-2019</fullName>
            </value>
            <value>
                <fullName>Jan-2020</fullName>
            </value>
            <value>
                <fullName>Feb-2020</fullName>
            </value>
            <value>
                <fullName>March-2020</fullName>
            </value>
            <value>
                <fullName>April-2020</fullName>
            </value>
            <value>
                <fullName>May-2020</fullName>
            </value>
            <value>
                <fullName>June-2020</fullName>
            </value>
            <value>
                <fullName>July-2020</fullName>
            </value>
            <value>
                <fullName>Aug-2020</fullName>
            </value>
            <value>
                <fullName>Sept-2020</fullName>
            </value>
            <value>
                <fullName>Oct-2020</fullName>
            </value>
            <value>
                <fullName>Nov-2020</fullName>
            </value>
            <value>
                <fullName>Dec-2020</fullName>
            </value>
            <value>
                <fullName>Jan-21</fullName>
            </value>
            <value>
                <fullName>Feb-21</fullName>
            </value>
            <value>
                <fullName>Mar-21</fullName>
            </value>
            <value>
                <fullName>Apr-21</fullName>
            </value>
            <value>
                <fullName>May-21</fullName>
            </value>
            <value>
                <fullName>Jun-21</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>