Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Party_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Party_Feedback__c</fullName>
    <label>Party Feedback(not used)</label>
    <type>TextArea</type>
</CustomField>