Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Pending_From__c.field-meta.xml
<CustomField>
    <fullName>Pending_From__c</fullName>
    <label>Pending From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Sales Team</fullName>
            </value>
            <value>
                <fullName>Cart</fullName>
                <default>true</default>
                <label>Cart</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>