Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/PIN_Number__c.field-meta.xml
<CustomField>
    <fullName>PIN_Number__c</fullName>
    <label>PIN Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>