Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Products Interested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPVC</fullName>
            </value>
            <value>
                <fullName>UPVC</fullName>
            </value>
            <value>
                <fullName>Aqua Life</fullName>
            </value>
            <value>
                <fullName>SWR</fullName>
            </value>
            <value>
                <fullName>Column Pipes</fullName>
            </value>
            <value>
                <fullName>IS 4985</fullName>
            </value>
            <value>
                <fullName>Grease Seperator</fullName>
            </value>
            <value>
                <fullName>Underground Drainage Pipes</fullName>
            </value>
            <value>
                <fullName>Adoptors</fullName>
            </value>
            <value>
                <fullName>Aerator</fullName>
            </value>
            <value>
                <fullName>Air Admittance Valve</fullName>
            </value>
            <value>
                <fullName>Ball Valves</fullName>
            </value>
            <value>
                <fullName>Collapsible Connectors</fullName>
            </value>
            <value>
                <fullName>Concealed Cisterns</fullName>
            </value>
            <value>
                <fullName>Concealed Valves</fullName>
            </value>
            <value>
                <fullName>External Drainage</fullName>
            </value>
            <value>
                <fullName>Fire Collars</fullName>
            </value>
            <value>
                <fullName>Inspection Chambers</fullName>
            </value>
            <value>
                <fullName>Manhole</fullName>
            </value>
            <value>
                <fullName>Multiquick</fullName>
            </value>
            <value>
                <fullName>Non-return Valves</fullName>
            </value>
            <value>
                <fullName>Sanitary System</fullName>
            </value>
            <value>
                <fullName>Silent SWR</fullName>
            </value>
            <value>
                <fullName>Solvent Cement</fullName>
            </value>
            <value>
                <fullName>V4</fullName>
            </value>
            <value>
                <fullName>Valves (BUV &amp; BFV)</fullName>
            </value>
            <value>
                <fullName>Waste &amp; Traps</fullName>
            </value>
            <value>
                <fullName>WC PAN Connector</fullName>
            </value>
            <value>
                <fullName>Divertor</fullName>
            </value>
            <value>
                <fullName>Flanges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>