Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason(not used)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>