Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/RemarksFollowup__c.field-meta.xml
<CustomField>
    <fullName>RemarksFollowup__c</fullName>
    <label>Remarks(not used)</label>
    <type>TextArea</type>
</CustomField>