Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Repeat_Followup__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Followup__c</fullName>
    <label>Repeat Followup Remarks Executive(notuse</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>