Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Reporting_To__c.field-meta.xml
<CustomField>
    <fullName>Reporting_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>